fixed alignment of priorities and projects dropdowns on mission card

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -860,11 +860,11 @@ textarea {
         & > .preview {
           clear: both;
           & > .action {
-            &:first-child {
+            &.togglePriorities {
               float: left;
               margin-left: 10%;
             }
-            &:nth-child(2) {
+            &.toggleProjects {
               margin-left: 60%;
               margin-bottom: 0;
             }
